Kuboard/kuboard_example.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: example
  name: cloud-eureka
  annotations:
    k8s.eip.work/workload: cloud-eureka
    k8s.eip.work/displayName: 服务注册
    k8s.eip.work/service: ClusterIP
    k8s.eip.work/ingress: 'true'
  labels:
    k8s.eip.work/layer: cloud
    k8s.eip.work/name: cloud-eureka
spec:
  selector:
    matchLabels:
      k8s.eip.work/layer: cloud
      k8s.eip.work/name: cloud-eureka
  template:
    metadata:
      labels:
        k8s.eip.work/layer: cloud
        k8s.eip.work/name: cloud-eureka
    spec:
      containers:
        - image: 'eipsample/example-cloud-eureka:v1.0.0-alpha.1'
          imagePullPolicy: Always
          name: cloud-eureka
          volumeMounts: []
      volumes: []
  replicas: 1
  volumeClaimTemplates: []
  serviceName: cloud-eureka

---
apiVersion: v1
kind: Service
metadata:
  namespace: example
  name: cloud-eureka
  annotations:
    k8s.eip.work/workload: cloud-eureka
    k8s.eip.work/displayName: 服务注册
  labels:
    k8s.eip.work/layer: cloud
    k8s.eip.work/name: cloud-eureka
spec:
  clusterIP: None
  selector:
    k8s.eip.work/layer: cloud
    k8s.eip.work/name: cloud-eureka
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: eureka

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: example
  name: cloud-eureka
  annotations:
    k8s.eip.work/workload: cloud-eureka
    k8s.eip.work/displayName: 服务注册
  labels:
    k8s.eip.work/layer: cloud
    k8s.eip.work/name: cloud-eureka
spec:
  ingressClassName: 'nginx'
  rules:
    - host: cloud-eureka.magedu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-eureka
                port:
                  number: 9200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example
  name: db-example
  annotations:
    k8s.eip.work/workload: db-example
    k8s.eip.work/displayName: db-example
    k8s.eip.work/service: ClusterIP
    k8s.eip.work/ingress: 'false'
  labels:
    k8s.eip.work/layer: db
    k8s.eip.work/name: db-example
spec:
  selector:
    matchLabels:
      k8s.eip.work/layer: db
      k8s.eip.work/name: db-example
  template:
    metadata:
      labels:
        k8s.eip.work/layer: db
        k8s.eip.work/name: db-example
    spec:
      containers:
        - image: 'eipsample/example-db-example:v1.0.0-alpha.1'
          imagePullPolicy: Always
          name: db-example
          volumeMounts:
            - name: db-example-storage
              mountPath: /var/lib/mysql
              subPath: mysql
      volumes:
        - name: db-example-storage
          persistentVolumeClaim:
            claimName: db-example-storage
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  namespace: example
  name: db-example
  annotations:
    k8s.eip.work/workload: db-example
    k8s.eip.work/displayName: db-example
  labels:
    k8s.eip.work/layer: db
    k8s.eip.work/name: db-example
spec:
  selector:
    k8s.eip.work/layer: db
    k8s.eip.work/name: db-example
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example
  name: gateway-example
  annotations:
    k8s.eip.work/workload: gateway-example
    k8s.eip.work/displayName: gateway-example
    k8s.eip.work/service: ClusterIP
    k8s.eip.work/ingress: 'false'
  labels:
    k8s.eip.work/layer: gateway
    k8s.eip.work/name: gateway-example
spec:
  selector:
    matchLabels:
      k8s.eip.work/layer: gateway
      k8s.eip.work/name: gateway-example
  template:
    metadata:
      labels:
        k8s.eip.work/layer: gateway
        k8s.eip.work/name: gateway-example
    spec:
      containers:
        - image: 'eipsample/example-gateway-example:v1.0.0-alpha.1'
          imagePullPolicy: Always
          name: gateway-example
      volumes: []
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  namespace: example
  name: gateway-example
  annotations:
    k8s.eip.work/workload: gateway-example
    k8s.eip.work/displayName: gateway-example
  labels:
    k8s.eip.work/layer: gateway
    k8s.eip.work/name: gateway-example
spec:
  selector:
    k8s.eip.work/layer: gateway
    k8s.eip.work/name: gateway-example
  type: ClusterIP
  ports:
    - port: 9201
      targetPort: 9201
      protocol: TCP
      name: gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example
  name: svc-example
  annotations:
    k8s.eip.work/workload: svc-example
    k8s.eip.work/displayName: svc-example
    k8s.eip.work/service: none
    k8s.eip.work/ingress: 'false'
  labels:
    k8s.eip.work/layer: svc
    k8s.eip.work/name: svc-example
spec:
  selector:
    matchLabels:
      k8s.eip.work/layer: svc
      k8s.eip.work/name: svc-example
  template:
    metadata:
      labels:
        k8s.eip.work/layer: svc
        k8s.eip.work/name: svc-example
    spec:
      containers:
        - image: 'eipsample/example-svc-example:v1.0.0-alpha.1'
          imagePullPolicy: Always
          name: svc-example
      volumes: []
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example
  name: web-example
  annotations:
    k8s.eip.work/workload: web-example
    k8s.eip.work/displayName: web-example
    k8s.eip.work/service: ClusterIP
    k8s.eip.work/ingress: 'true'
  labels:
    k8s.eip.work/layer: web
    k8s.eip.work/name: web-example
spec:
  selector:
    matchLabels:
      k8s.eip.work/layer: web
      k8s.eip.work/name: web-example
  template:
    metadata:
      labels:
        k8s.eip.work/layer: web
        k8s.eip.work/name: web-example
    spec:
      containers:
        - image: 'eipsample/example-web-example:v1.0.0-alpha.1'
          imagePullPolicy: Always
          name: web-example
          env: []
      volumes: []
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  namespace: example
  name: web-example
  annotations:
    k8s.eip.work/workload: web-example
    k8s.eip.work/displayName: web-example
  labels:
    k8s.eip.work/layer: web
    k8s.eip.work/name: web-example
spec:
  selector:
    k8s.eip.work/layer: web
    k8s.eip.work/name: web-example
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: example
  name: web-example
  annotations:
    k8s.eip.work/workload: web-example
    k8s.eip.work/displayName: web-example
  labels:
    k8s.eip.work/layer: web
    k8s.eip.work/name: web-example
spec:
  ingressClassName: 'nginx'
  rules:
    - host: web-example.magedu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-example
                port:
                  number: 80
